# browser_agent_bridge

./: .gitignore  AGENTS.md  CONTRIBUTING.md  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  publish.yml
browser_bridge/: __init__.py  cli.py  secret.py  server.py  state.py
extension/: background.js  content.js  manifest.json  popup.css  popup.html  popup.js
skills/browser-bridge-cli/: SKILL.md
tasks/: todo.md
tests/: test_cli.py  test_secret.py  test_server_http.py  test_server_security.py  test_server_ws.py
